# advent-of-compiler-errors

./: Cargo.toml
src/: day01.rs  main.rs
src/day01/: main.rs
src/day02/: main.rs
src/day06/: main.rs
