[package]
name = "advent-of-compiler-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1"
path = "src/day01/main.rs"

[[bin]]
name = "2"
path = "src/day02/main.rs"

[[bin]]
name = "6"
path = "src/day06/main.rs"
